--- a/src/BestBooks.css
+++ b/src/BestBooks.css
@@ -1,3 +1,10 @@
 .jumbotron{
   margin-bottom: 0;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.h-85{
+  height: 85vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
