--- a/src/Login.css
+++ b/src/Login.css
@@ -1,4 +1,20 @@
 .card{
   margin: auto;
   text-align: center;
+  height: 50%;
+  
+}
+.card-body{
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  flex-direction: column;
+}
+
+.all{
+  width: 100%;
+  height: 85vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
