--- a/src/BestBooks.css
+++ b/src/BestBooks.css
@@ -8,3 +8,14 @@
   justify-content: center;
   align-items: center;
 }
+.carousel-caption h3,.carousel-caption p{
+  color:#000 !important;
+}
+.carousel-inner{
+  height: 100% !important;
+  width: 100% !important;
+}
+.carousel-item{
+  width: 100% !important;
+  height: 100% !important;
+}
