--- a/src/BestBooks.css
+++ b/src/BestBooks.css
@@ -19,3 +19,9 @@
 .card-title{
   color: #E0A800 !important;
 }
+.btn-rawan{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
